--- a/src/Server.UI/Components/Shared/Layout/HeaderMenu.razor
+++ b/src/Server.UI/Components/Shared/Layout/HeaderMenu.razor
@@ -23,6 +23,7 @@
         </MudTooltip>
         <MudSpacer/>
         <AgentStatusToggle/>
+        <EscalationIndicator/>
         <NotificationIndicator/>
         <NotificationMenu/>
     </MudHidden>
@@ -36,6 +37,7 @@
         </MudTooltip>
         <MudSpacer/>
         <AgentStatusToggle/>
+        <EscalationIndicator/>
         <NotificationIndicator/>
         <NotificationMenu/>
     </MudHidden>
